--- a/WebDesign/Workshops/JavaJamCoffeeHouse/index.html
+++ b/WebDesign/Workshops/JavaJamCoffeeHouse/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="./stylesheets/master.css">
+    <link rel="stylesheet" href="./stylesheets/index.css">
     <title></title>
   </head>
   <body>
@@ -13,9 +14,9 @@
     <nav>
       <ul>
         <li><a href="#" class="current">Home</a></li>
-        <li><a href="/page/menu.html">Menu</a></li>
-        <li><a href="/page/music.html">Music</a></li>
-        <li><a href="/page/jobs.html">Jobs</a></li>
+        <li><a href="./pages/menu.html">Menu</a></li>
+        <li><a href="./pages/music.html">Music</a></li>
+        <li class="nav-last"><a href="./pages/jobs.html">Jobs</a></li>
       </ul>
       <br/>
     </nav>
@@ -24,7 +25,7 @@
       <div class="relax">
         <h2>Relax at JavaJam</h2>
         <ul>
-          <li>Specialty Coffee and Tea</li>
+          <li>Specialty <span class="text-coffee">Coffee</span> and <span class="text-tea">Tea</span></li>
           <li>Bagels, Muffins, and Organic Snacks</li>
           <li>Music and Poetry Reading</li>
           <li>Open Mic Night</li>
