In class project 30. Jan. WebDesign

--- a/WebDesign/Workshops/JavaJamCoffeeHouse/index.html
+++ b/WebDesign/Workshops/JavaJamCoffeeHouse/index.html
@@ -7,8 +7,12 @@
     <title></title>
   </head>
   <body>
+    <div class="pageWrapper">
+
     <header>
-      <h1>JavaJam Coffee House</h1>
+      <img src="./resources/LogoSketch.jpg" alt="logo" />
+      <div class="headerWarp"><h1>JavaJam<br />
+      Coffee House</h1></div>
     </header>
 
     <nav>
@@ -45,8 +49,6 @@
       </div>
 
     </footer>
-
-
-    <a href="index-raw.html">Un-styled page</a>
+    </div>
   </body>
 </html>
