--- a/WebDesign/Workshops/JavaJamCoffeeHouse/pages/menu.html
+++ b/WebDesign/Workshops/JavaJamCoffeeHouse/pages/menu.html
@@ -7,16 +7,20 @@
     <title></title>
   </head>
   <body>
+    <div class="pageWrapper">
+
     <header>
-      <h1>JavaJam Coffee House</h1>
+      <img src="../resources/LogoSketch.jpg" alt="logo" />
+      <div class="headerWarp"><h1>JavaJam<br />
+      Coffee House</h1></div>
     </header>
 
     <nav>
       <ul>
         <li><a href="../index.html">Home</a></li>
         <li><a href="#" class="current">Menu</a></li>
-        <li><a href="./pages/music.html">Music</a></li>
-        <li class="nav-last"><a href="./pages/jobs.html">Jobs</a></li>
+        <li><a href="music.html">Music</a></li>
+        <li class="nav-last"><a href="jobs.html">Jobs</a></li>
       </ul>
       <br/>
     </nav>
@@ -45,6 +49,6 @@
       </div>
 
     </footer>
-
+  </div>
   </body>
 </html>
