31 Jan. In class WebDesign

--- a/WebDesign/Workshops/JavaJamCoffeeHouse/index.html
+++ b/WebDesign/Workshops/JavaJamCoffeeHouse/index.html
@@ -29,15 +29,32 @@
       <div class="relax">
         <h2>Relax at JavaJam</h2>
         <ul>
-          <li>Specialty <span class="text-coffee">Coffee</span> and <span class="text-tea">Tea</span></li>
-          <li>Bagels, Muffins, and Organic Snacks</li>
-          <li>Music and Poetry Reading</li>
-          <li>Open Mic Night</li>
+          <li>
+            <img src="./resources/coffee-cup.png">
+            <p>Specialty Coffee and Tea</p>
+            <a href="./pages/menu.html">Check the Menu ></a>
+          </li>
+          <li>
+            <img src="./resources/cupcake.png">
+            <p>Bagels, Muffins, and Organic Snacks</p>
+            <a href="./pages/menu.html">Check the Menu ></a>
+          </li>
+          <li>
+            <img src="./resources/poetry.png">
+            <p>Music and Poetry Reading</p>
+            <a href="./pages/music.html">Check Our Music ></a>
+          </li>
+          <li>
+            <img src="./resources/microphone.png">
+            <p>Open Mic <br />Night</p>
+            <a href="./pages/music.html">Check Our Music ></a>
+          </li>
         </ul>
       </div>
     </div>
 
     <footer>
+      <hr />
       <div class="contact">
         54321 Route 42<br/>
         Ellison Bay, WI 54210<br/>
