--- a/WebDesign/Workshops/JavaJamCoffeeHouse/pages/music.html
+++ b/WebDesign/Workshops/JavaJamCoffeeHouse/pages/music.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="../stylesheets/master.css">
-    <link rel="stylesheet" href="../stylesheets/menu.css">
+    <link rel="stylesheet" href="../stylesheets/music.css">
     <title></title>
   </head>
   <body>
@@ -26,9 +26,18 @@
     </nav>
 
     <div class="container">
-      <div class="menu">
+      <div class="floated f-left">
         <ul>
           <li>music what</li>
+          <li>1</li>
+          <li>2</li>
+          <li>3</li>
+          <li>4</li>
+        </ul>
+      </div>
+      <div class="floated f-right">
+        <ul>
+          <li>music intro</li>
           <li>1</li>
           <li>2</li>
           <li>3</li>
@@ -38,6 +47,7 @@
     </div>
 
     <footer>
+      <hr />
       <div class="contact">
         54321 Route 42<br/>
         Ellison Bay, WI 54210<br/>
