In class quiz 14 Feb, some updates in assignment

--- a/WebDesign/Assignments/ePortfolio/index.html
+++ b/WebDesign/Assignments/ePortfolio/index.html
@@ -23,14 +23,52 @@
 
       <main>
 
-      
+        <div class="brief">
+          <h3>Why This Course...</h3>
+          <p>I was always thinking of getting myself involved in the film industry in a technical way (computer science mixed with creativity and humanity is exciting right?). Since that choice seems to lead to a career about visual effects, I searched for the course with a combination of IT and media and with a VFX module. That is why I want to study here.</p>
+        </div>
+
+        <div class="cv-title">
+          <div class="cv-title-line">
+          </div>
+          <h3>C V</h3>
+        </div>
+
+        <div class="cv-info">
+          <h3>Chen FAN</h3>
+          <p>Mail : fceek96@gmail.com</p>
+          <p>Tel : +44 075 291 48498 (UK)</p>
+          <p class="info-indent">+86 150 0820 5902 (China)</p>
+          <p>Add : 47 Crespin Way</p>
+        </div>
+
+        <div class="cv-skills">
+          <h3>Skills</h3>
+          <ul>
+            <li>English</li>
+            <li>Chinese</li>
+            <li>Front-End Web Develop</li>
+            <li>Java, Python and C#</li>
+            <li>Graphic Design and Tools</li>
+            <li>Game Engine: Unity / Unreal</li>
+          </ul>
+        </div>
+
+        <div class="cv-exps">
+          <h3>Experience</h3>
+
+        </div>
+
+        <div class="cv-quals">
+
+        </div>
 
       </main>
 
       <footer>
-        <h3>Contact</h3>
-        <p>Fceek96@gmail.com</p>
-        <p>47 Crespin Way, BN1 7FG</p>
+        <h3>Fceek</h3>
+        <p>Assignment of WSDD</p>
+        <p>14 Feb. 2019 @ Brighton</p>
       </footer>
 
     </div>
