--- a/WebDesign/Assignments/ePortfolio/pages/self.html
+++ b/WebDesign/Assignments/ePortfolio/pages/self.html
@@ -26,9 +26,9 @@
       </main>
 
       <footer>
-        <h3>Contact</h3>
-        <p>Fceek96@gmail.com</p>
-        <p>47 Crespin Way, BN1 7FG</p>
+        <h3>Fceek</h3>
+        <p>Assignment of WSDD</p>
+        <p>14 Feb. 2019 @ Brighton</p>
       </footer>
 
     </div>
