--- a/WebDesign/Assignments/ePortfolio/pages/unitb.html
+++ b/WebDesign/Assignments/ePortfolio/pages/unitb.html
@@ -16,7 +16,7 @@
       <nav>
         <ul>
           <li class="single"><a href="../index.html">Introduction</a></li>
-          <li class="active dual">Units - <span><a href="unita.html">Page A</a></span><span><a href="#">Page B</a></span></li>
+          <li class="active dual">Units - <span><a href="unita.html">Page A</a></span><span class="active"><a href="#">Page B</a></span></li>
           <li class="single"><a href="self.html">Evaluation</a></li>
         </ul>
       </nav>
@@ -26,9 +26,9 @@
       </main>
 
       <footer>
-        <h3>Contact</h3>
-        <p>Fceek96@gmail.com</p>
-        <p>47 Crespin Way, BN1 7FG</p>
+        <h3>Fceek</h3>
+        <p>Assignment of WSDD</p>
+        <p>14 Feb. 2019 @ Brighton</p>
       </footer>
 
     </div>
