Assignment progress of 15 Feb

--- a/WebDesign/Assignments/ePortfolio/pages/unita.html
+++ b/WebDesign/Assignments/ePortfolio/pages/unita.html
@@ -22,7 +22,59 @@
       </nav>
 
       <main>
-        balabalaA
+
+        <div class="un-wrapper">
+          <div class="units overview">
+            <div class="un-title">
+              <h2>MACO</h2>
+              <p>Mathematics for Computer Science</p>
+              <a href=" "> > To Canvas Page </a>
+            </div>
+
+            <div class="un-discription">
+
+            </div>
+
+            <div class="un-image">
+
+            </div>
+
+          </div>
+
+          <div class="units reflection">
+
+          </div>
+
+          <div class="units experience">
+
+          </div>
+        </div>
+
+        <div class="un-wrapper">
+          <div class="units overview">
+            <div class="un-title">
+
+            </div>
+
+            <div class="un-discription">
+
+            </div>
+
+            <div class="un-image">
+
+            </div>
+
+          </div>
+
+          <div class="units reflection">
+
+          </div>
+
+          <div class="units experience">
+
+          </div>
+        </div>
+
       </main>
 
       <footer>
