--- a/WebDesign/Assignments/ePortfolio/pages/unitb.html
+++ b/WebDesign/Assignments/ePortfolio/pages/unitb.html
@@ -22,7 +22,57 @@
       </nav>
 
       <main>
-        balabalaB
+
+        <div class="un-wrapper">
+          <div class="units overview">
+            <div class="un-title">
+
+            </div>
+
+            <div class="un-discription">
+
+            </div>
+
+            <div class="un-image">
+
+            </div>
+
+          </div>
+
+          <div class="units reflection">
+
+          </div>
+
+          <div class="units experience">
+
+          </div>
+        </div>
+
+        <div class="un-wrapper">
+          <div class="units overview">
+            <div class="un-title">
+
+            </div>
+
+            <div class="un-discription">
+
+            </div>
+
+            <div class="un-image">
+
+            </div>
+
+          </div>
+
+          <div class="units reflection">
+
+          </div>
+
+          <div class="units experience">
+
+          </div>
+        </div>
+
       </main>
 
       <footer>
