--- a/WebDesign/Assignments/ePortfolio/index.html
+++ b/WebDesign/Assignments/ePortfolio/index.html
@@ -34,35 +34,58 @@
           <h3>C V</h3>
         </div>
 
-        <div class="cv-info">
-          <h3>Chen FAN</h3>
-          <p>Mail : fceek96@gmail.com</p>
-          <p>Tel : +44 075 291 48498 (UK)</p>
-          <p class="info-indent">+86 150 0820 5902 (China)</p>
-          <p>Add : 47 Crespin Way</p>
+        <div class="wrapper">
+          <div class="cv avatar">
+            <img src="./resources/avatar.jpg" alt="My Avatar">
+          </div>
+
+          <div class="cv info">
+            <h3>Chen FAN</h3>
+            <p>Birth : 15 July 1996</p>
+            <p>Mail : fceek96@gmail.com</p>
+            <p>Tel : +44 075 291 48498 (UK)</p>
+            <p class="info-indent">+86 150 0820 5902 (China)</p>
+            <p>Add : 47 Crespin Way</p>
+          </div>
+
+          <div class="break"></div>
+
+          <div class="cv skills">
+            <h3>Skills</h3>
+            <ul>
+              <li>- English</li>
+              <li>- Chinese</li>
+              <li>- Front-End Web Develop</li>
+              <li>- Java, Python and C#</li>
+              <li>- Graphic Design and Tools</li>
+              <li>- Game Engine: Unity / Unreal</li>
+            </ul>
+          </div>
+
+          <div class="break"></div>
+
+          <div class="cv exps">
+            <h3>Experience</h3>
+            <dl>
+              <dd>IT Consultant</dd>
+              <dt>> JDG E-Sport</dt>
+              <dd>Web Developer</dd>
+              <dt>> UESTC Publicity Department</dt>
+            </dl>
+
+          </div>
+
+          <div class="break"></div>
+
+          <div class="cv quals">
+            <h3>Qualification</h3>
+            <ul>
+              <li>Bachelor - University of Science and Technology of China</li>
+              <li>Member - Cohesion Network Security Studio</li>
+            </ul>
+          </div>
+
         </div>
-
-        <div class="cv-skills">
-          <h3>Skills</h3>
-          <ul>
-            <li>English</li>
-            <li>Chinese</li>
-            <li>Front-End Web Develop</li>
-            <li>Java, Python and C#</li>
-            <li>Graphic Design and Tools</li>
-            <li>Game Engine: Unity / Unreal</li>
-          </ul>
-        </div>
-
-        <div class="cv-exps">
-          <h3>Experience</h3>
-
-        </div>
-
-        <div class="cv-quals">
-
-        </div>
-
       </main>
 
       <footer>
