--- a/WebDesign/Assignments/ePortfolio/pages/self.html
+++ b/WebDesign/Assignments/ePortfolio/pages/self.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="../css/main.css">
-    <title></title>
+    <title>EP - Eval</title>
   </head>
   <body>
     <div class="container">
@@ -22,7 +22,59 @@
       </nav>
 
       <main>
+        <div class="brief">
+          <h3>Self Assesment</h3>
+          <p>Evaluating myself in terms of the given attributes.</p>
+        </div>
 
+        <div class="un-wrapper">
+          <div class="att">
+            <div class="def">
+              <h4>Critical Thinking and Problem Solving</h4>
+            </div>
+            <div class="bar bar-1"></div>
+            <div class="com">
+              <p>When occured with a problem, I usually stick to it and work until the solution was found. I am creative enough to figure out new ways and curious enough to try them out. On the other hand, I am not good at critical thinking because it seems too easy for me to trust others.</p>
+            </div>
+          </div>
+          <div class="att">
+            <div class="def">
+              <h4>Professionalism</h4>
+            </div>
+            <div class="bar bar-2"></div>
+            <div class="com">
+              <p>I do not like restrictions so might not up to the standerd of professionalism.</p>
+            </div>
+          </div>
+          <div class="att">
+            <div class="def">
+              <h4>Communication Skills</h4>
+            </div>
+            <div class="bar bar-3"></div>
+            <div class="com">
+              <p>Lack of communication skills is a significant week point of mine. I am planning to improve this in the following years.</p>
+            </div>
+          </div>
+          <div class="att">
+            <div class="def">
+              <h4>Teamwork and Leadership</h4>
+            </div>
+            <div class="bar bar-4"></div>
+            <div class="com">
+              <p>I could have been a good team leader and sometimes a good member. However, the weakness in communication hinders my teamwork ability. I think this will improve a lot as I solved the communication skills problem.</p>
+            </div>
+          </div>
+          <div class="att">
+            <div class="def">
+              <h4>Learning and Research Skills</h4>
+            </div>
+            <div class="bar bar-5"></div>
+            <div class="com">
+              <p>It's fine.</p>
+            </div>
+          </div>
+
+        </div>
 
       </main>
 
