--- a/WebDesign/Assignments/ePortfolio/pages/unita.html
+++ b/WebDesign/Assignments/ePortfolio/pages/unita.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="../css/main.css">
-    <title></title>
+    <title>EP - Unit - A</title>
   </head>
   <body>
     <div class="container">
@@ -23,55 +23,67 @@
 
       <main>
 
+        <div class="brief">
+          <h3>Units Commentary, Page A</h3>
+          <p>Introduction of two different units I took last semester.</p>
+        </div>
+
         <div class="un-wrapper">
           <div class="units overview">
+
+            <div class="un-image">
+              <img src="../resources/maco.gif" alt="Math - Gradient">
+            </div>
+
             <div class="un-title">
-              <h2>MACO</h2>
+              <h2>M A C O</h2>
               <p>Mathematics for Computer Science</p>
-              <a href=" "> > To Canvas Page </a>
+              <a href="https://canvas.sussex.ac.uk/courses/6481"> > To Canvas Page </a>
             </div>
 
             <div class="un-discription">
-
-            </div>
-
-            <div class="un-image">
-
+              <p>Basis in mathematics applicable across different subjects and mathematics relevant to the study of computing.</p>
             </div>
 
           </div>
 
-          <div class="units reflection">
+          <div class="un-line"></div>
 
+          <div class="units reflection">
+            <p><span>I</span> have learned many numerical, algebraic, graphical and logical concepts. Together with how to solve problems with the help of these concepts. For example, manipulating numbers in different bases, dealing with propositional logic and traveling salesman problem. I regard this unit as a complete review of math knowledge I have gained before, so that I can get myself adapted to undergraduate study at Sussex.</p>
           </div>
 
           <div class="units experience">
-
+            <p><span>F</span>rankly speaking, knowledge introduced in this unit was mostly taught in Chinese high schools. But the math units here in the UK are much more specific and profound in certain subjects. That means this unit can offer me some directions on what aspects I need to research in order to perform better in following courses.</p>
           </div>
         </div>
 
         <div class="un-wrapper">
           <div class="units overview">
-            <div class="un-title">
+            <div class="un-image">
+              <img src="../resources/aesf.gif" alt="AESF - Gradient">
+            </div>
 
+            <div class="un-title">
+              <h2>A E S F</h2>
+              <p>Academic English Skills ( Fast )</p>
+              <a href="https://canvas.sussex.ac.uk/courses/7327"> > To Canvas Page </a>
             </div>
 
             <div class="un-discription">
-
-            </div>
-
-            <div class="un-image">
-
+              <p>Covering all English skills might be used in every aspects of university study.</p>
             </div>
 
           </div>
 
-          <div class="units reflection">
+          <div class="un-line"></div>
 
+          <div class="units reflection">
+            <p><span>I</span>n this unit, I managed to get through a full process of writing an essay: from barely a title to an outline and to a 1100-words essay. During this process I have got to know how to search for and evaluate data, give a presentation and attend discussions. English is one of the most important skill for university study, so I spent much time on this unit. Time and efforts spent would pay back in the future I think.</p>
           </div>
 
           <div class="units experience">
-
+            <p><span>I</span> had not been studying English for almost four years before I came here. Thanks to this unit for bring me back to English learning. However, I sill need to practice more in speaking.</p>
           </div>
         </div>
 
