--- a/WebDesign/Assignments/ePortfolio/pages/unitb.html
+++ b/WebDesign/Assignments/ePortfolio/pages/unitb.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="../css/main.css">
-    <title></title>
+    <title>EP - Unit - B</title>
   </head>
   <body>
     <div class="container">
@@ -22,54 +22,66 @@
       </nav>
 
       <main>
+        <div class="brief">
+          <h3>Units Commentary, Page B</h3>
+          <p>Introduction of two different units I am taking this semester.</p>
+        </div>
 
         <div class="un-wrapper">
           <div class="units overview">
-            <div class="un-title">
+            <div class="un-image">
+              <img src="../resources/wsdd.gif" alt="Web - Gradient">
+            </div>
 
+            <div class="un-title">
+              <h2>W S D D</h2>
+              <p>Website Design and Development</p>
+              <a href="https://canvas.sussex.ac.uk/courses/7257"> > To Canvas Page </a>
             </div>
 
             <div class="un-discription">
-
-            </div>
-
-            <div class="un-image">
-
+              <p>From basic terminology of web to developing websites, combined with multimedia and database.</p>
             </div>
 
           </div>
 
-          <div class="units reflection">
+          <div class="un-line"></div>
 
+          <div class="units reflection">
+            <p><span>I</span> have learned the very basic knowledge about HTML and CSS till now. Using them I can create simple web pages with different layouts, modify the pages with styles. The difficult part I have found about this unit is solving various strange style errors. Since HTML and CSS are not very strict, errors can be ignored easily. It is a challege to find out and deal with problems.</p>
           </div>
 
           <div class="units experience">
-
+            <p><span>T</span>o be honest, I have done dozens of web design work before. But in most of the cases, I focused on the graphic and interface design, not the code. This unit helps me systematically went through the coding part so that I can handle with more complicated work in the future.</p>
           </div>
         </div>
 
         <div class="un-wrapper">
           <div class="units overview">
-            <div class="un-title">
+            <div class="un-image">
+              <img src="../resources/oopj.gif" alt="OOP - Gradient">
+            </div>
 
+            <div class="un-title">
+              <h2>O O P J</h2>
+              <p>Object Oriented Programming (Java)</p>
+              <a href="https://canvas.sussex.ac.uk/courses/7255"> > To Canvas Page </a>
             </div>
 
             <div class="un-discription">
-
-            </div>
-
-            <div class="un-image">
-
+              <p>Provide relevant programming knowledge and skills for the study of informatics.</p>
             </div>
 
           </div>
 
-          <div class="units reflection">
+          <div class="un-line"></div>
 
+          <div class="units reflection">
+            <p><span>I</span>n this unit, I was taught about concepts of object oriented programming: class and object, different kinds of methods, rules like encapsulation and polymorphism. Although those concepts are just of  beginner's level, they can provide a steady foundation for the study in year 1 and 2. Beside the OOP concepts, I learned about JAVA programming language as well.</p>
           </div>
 
           <div class="units experience">
-
+            <p><span>O</span>OP is the title of my essay of AESF class in the last semester, but I was not so clear about OOP even if I finished the essay. And my previous experiences of programming were almost all about algorithms, this is the first time I got to know about software engineering and constructing. I feel very interested and will try to get a good grade.</p>
           </div>
         </div>
 
